<resources>
    <string name="app_name">Bill Please</string>
    <string name="blank" />
    <string name="reset">RESET</string>
    <string name="split">SPLIT</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="discount">Discount (%)</string>
    <string name="gst">GST</string>
    <string name="no_gst">NO GST</string>
    <string name="svs">SVS</string>
    <string name="no_svs">NO SVS</string>
    <string name="num_of_pax">Num. of Pax</string>
    <string name="amount">Amount</string>
    <string name="_0">0</string>
    <string name="_0_00">0.00</string>
</resources>